# alvr-cardboard

./: .gitignore  .gitmodules  LICENSE  README.md  build-cardboard-sdk.sh  build.gradle  prepare-deps.sh
.github/workflows/: build.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cpp_main.cpp
app/src/main/java/com/google/cardboard/: VrActivity.java
app/src/main/res/values/: strings.xml
